@@ -33,25 +33,33 @@
 import ometahtest
 import ometahstats
 
-runs = 100
+runs = 1000
 
-print 'Launching test runs:'
-print '  First test on JGEN:'
-u = ometahtest.Test()
-u.setArgs('-e 100 -p Rosenbrock -d 2 -m JGEN')
-u.setNbRuns(runs)
-u.setOmetahPath('../ometah/ometah')
-u.start()
+#~ print 'Launching test runs:'
+#~ print '  First test:'
+#~ u = ometahtest.Test()
+#~ u.setArgs('-s 10 -i 10 -e 100 -p Rosenbrock -d 2 -m CEDA')
+#~ u.setNbRuns(runs)
+#~ u.setOmetahPath('../ometah/ometah')
+#~ u.start()
 
-print '  Second test on SGEN:'
-v = ometahtest.Test()
-v.setArgs('-e 100 -p Rosenbrock -d 2 -m SGEN')
-v.setNbRuns(runs)
-v.setOmetahPath('../ometah/ometah')
-v.start()
+#~ print '  Second test:'
+#~ v = ometahtest.Test()
+#~ v.setArgs('-s 10 -i 10 -e 100 -p Rosenbrock -d 2 -m RA')
+#~ v.setNbRuns(runs)
+#~ v.setOmetahPath('../ometah/ometah')
+#~ v.start()
+
+#~ print '  Third test:'
+#~ w = ometahtest.Test()
+#~ w.setArgs('-s 100 -i 10 -e 10000 -p Rosenbrock -d 1 -m HCIAC')
+#~ w.setNbRuns(runs)
+#~ w.setOmetahPath('../ometah/ometah')
+#~ w.start()
 
 print '\nLaunching data process:'
-paths = [ u.getPath(), v.getPath() ]
+#paths = [ u.getPath(), v.getPath()]#, w.getPath() ]
+paths = ['results/Rosenbrock_CEDA_d2_e100_r27461_1', 'results/Rosenbrock_RA_d2_e100_r1433_1']
 print '  Using ',paths
 
 ometahstats.process(paths,
@@ -67,4 +75,4 @@ ometahstats.process(paths,
     'iteration_median_logarithmic',
     'end_optimum_distribution_position2D'
     ],
-    '.ps') # output type
+    '.png') # output type
