@@ -58,8 +58,6 @@ class iteration_optimum_quantilebox(Plugin):
 
     # necessary method, called when lauching the plugin
     def process(self):
-        # uncomment this line if you use a R output
-        self.outputInit()
         
         # put your plugin code here
         # the data are in self.data :
@@ -71,6 +69,8 @@ class iteration_optimum_quantilebox(Plugin):
         
         i = 0
         for metalist in self.data.optimaIter:
+            # uncomment this line if you use a R output
+            self.outputInit()
             vlist = [[p.value for p in points] for points in metalist ]
             txt = '%s\nConvergence of optima' % self.data.tests[i].args
             zero = False
@@ -90,5 +90,5 @@ class iteration_optimum_quantilebox(Plugin):
             r.grid(nx=10, ny=40)
             i += 1
         
-        # uncomment this line if you use a R output
-        self.outputEnd()
+            # uncomment this line if you use a R output
+            self.outputEnd()
